--- a/3ro Curso Ingeniería Informática/2do Cuatrimestre/Algoritmia/practica2/practica_02_NavarroJorge_UbiernaMario.ipynb
+++ b/3ro Curso Ingeniería Informática/2do Cuatrimestre/Algoritmia/practica2/practica_02_NavarroJorge_UbiernaMario.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -103,8 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class GrafoMatriz(GrafoAbstracto):\n",
@@ -258,8 +260,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class GrafoListas(GrafoAbstracto):\n",
@@ -350,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -402,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -442,17 +446,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "488 µs ± 1.16 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "392 µs ± 2.23 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "244 µs ± 1.86 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
-      "195 µs ± 285 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "514 µs ± 8.97 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "429 µs ± 16.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "259 µs ± 5.69 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "207 µs ± 1.05 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
